--- a/README
+++ b/README
@@ -1,14 +1,9 @@
-TreadTiler is an addon for Blender 2.5x <http://www.blender.org/> to
+TreadTiler is an addon for Blender 2.61 <http://www.blender.org/> to
 allow quick replication of tyre tread patterns: you create a small piece
 of the pattern, and TreadTiler will replicate that around a ring to make
 the full tyre tread.
 
 The user manual can be found, in HTML format, in the docs/ subdirectory.
 Start with docs/index.html.
-
-Note that Blender 2.5 is still in prerelease and undergoing continuing
-development. Its Python APIs are still subject to change, so this script
-could very well break at some point. This version has been successfully
-tested with Blender 2.56a SVN r34238.
 
 Lawrence D'Oliveiro <ldo@geek-central.gen.nz>
